yalParser.py
# Generated from yal.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class yalParser ( Parser ):

    grammarFileName = "yal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'.'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'!'", "'while'", "'if'", 
                     "'else'", "'='", "'\"'", "'('", "')'", "','", "';'", 
                     "'{'", "'}'", "'function'", "'module'", "'size'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "REL_OP", "ADDSUB_OP", "ART_OP", "BTW_OP", "NOT_OP", 
                      "WHILE", "IF", "ELSE", "ASS_OP", "ASPA", "LPAR", "RPAR", 
                      "COMMA", "D_COMMA", "L_BRACKET", "R_BRACKET", "FUNC", 
                      "MODULE", "SIZE", "ID", "LETTER", "NUMBER", "DIGIT", 
                      "STRING", "SPACES_AND_SUCH", "LINE_COMMENT", "MULTI_COMMENT" ]

    RULE_module = 0
    RULE_declaration = 1
    RULE_function = 2
    RULE_var_list = 3
    RULE_array_element = 4
    RULE_scalar_element = 5
    RULE_stmt_list = 6
    RULE_stmt = 7
    RULE_assign = 8
    RULE_left_op = 9
    RULE_right_op = 10
    RULE_array_size = 11
    RULE_term = 12
    RULE_exprtest = 13
    RULE_while_yal = 14
    RULE_if_yal = 15
    RULE_else_yal = 16
    RULE_call = 17
    RULE_arg_list = 18
    RULE_arg = 19
    RULE_array_access = 20
    RULE_scalar_access = 21
    RULE_index = 22

    ruleNames =  [ "module", "declaration", "function", "var_list", "array_element", 
                   "scalar_element", "stmt_list", "stmt", "assign", "left_op", 
                   "right_op", "array_size", "term", "exprtest", "while_yal", 
                   "if_yal", "else_yal", "call", "arg_list", "arg", "array_access", 
                   "scalar_access", "index" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    REL_OP=4
    ADDSUB_OP=5
    ART_OP=6
    BTW_OP=7
    NOT_OP=8
    WHILE=9
    IF=10
    ELSE=11
    ASS_OP=12
    ASPA=13
    LPAR=14
    RPAR=15
    COMMA=16
    D_COMMA=17
    L_BRACKET=18
    R_BRACKET=19
    FUNC=20
    MODULE=21
    SIZE=22
    ID=23
    LETTER=24
    NUMBER=25
    DIGIT=26
    STRING=27
    SPACES_AND_SUCH=28
    LINE_COMMENT=29
    MULTI_COMMENT=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ModuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODULE(self):
            return self.getToken(yalParser.MODULE, 0)

        def ID(self):
            return self.getToken(yalParser.ID, 0)

        def L_BRACKET(self):
            return self.getToken(yalParser.L_BRACKET, 0)

        def R_BRACKET(self):
            return self.getToken(yalParser.R_BRACKET, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yalParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(yalParser.DeclarationContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yalParser.FunctionContext)
            else:
                return self.getTypedRuleContext(yalParser.FunctionContext,i)


        def getRuleIndex(self):
            return yalParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)




    def module(self):

        localctx = yalParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_module)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(yalParser.MODULE)
            self.state = 47
            self.match(yalParser.ID)
            self.state = 48
            self.match(yalParser.L_BRACKET)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==yalParser.ID:
                self.state = 49
                self.declaration()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==yalParser.FUNC:
                self.state = 55
                self.function()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.match(yalParser.R_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def D_COMMA(self):
            return self.getToken(yalParser.D_COMMA, 0)

        def array_element(self):
            return self.getTypedRuleContext(yalParser.Array_elementContext,0)


        def scalar_element(self):
            return self.getTypedRuleContext(yalParser.Scalar_elementContext,0)


        def ASS_OP(self):
            return self.getToken(yalParser.ASS_OP, 0)

        def NUMBER(self):
            return self.getToken(yalParser.NUMBER, 0)

        def array_size(self):
            return self.getTypedRuleContext(yalParser.Array_sizeContext,0)


        def ADDSUB_OP(self):
            return self.getToken(yalParser.ADDSUB_OP, 0)

        def getRuleIndex(self):
            return yalParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = yalParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 63
                self.array_element()
                pass

            elif la_ == 2:
                self.state = 64
                self.scalar_element()
                pass


            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==yalParser.ASS_OP:
                self.state = 67
                self.match(yalParser.ASS_OP)
                self.state = 76
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [yalParser.T__0]:
                    self.state = 68
                    self.match(yalParser.T__0)
                    self.state = 69
                    self.array_size()
                    self.state = 70
                    self.match(yalParser.T__1)
                    pass
                elif token in [yalParser.ADDSUB_OP, yalParser.NUMBER]:
                    self.state = 73
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==yalParser.ADDSUB_OP:
                        self.state = 72
                        self.match(yalParser.ADDSUB_OP)


                    self.state = 75
                    self.match(yalParser.NUMBER)
                    pass
                else:
                    raise NoViableAltException(self)



            self.state = 80
            self.match(yalParser.D_COMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_BRACKET(self):
            return self.getToken(yalParser.L_BRACKET, 0)

        def stmt_list(self):
            return self.getTypedRuleContext(yalParser.Stmt_listContext,0)


        def R_BRACKET(self):
            return self.getToken(yalParser.R_BRACKET, 0)

        def FUNC(self):
            return self.getToken(yalParser.FUNC, 0)

        def ASS_OP(self):
            return self.getToken(yalParser.ASS_OP, 0)

        def ID(self):
            return self.getToken(yalParser.ID, 0)

        def LPAR(self):
            return self.getToken(yalParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(yalParser.RPAR, 0)

        def array_element(self):
            return self.getTypedRuleContext(yalParser.Array_elementContext,0)


        def scalar_element(self):
            return self.getTypedRuleContext(yalParser.Scalar_elementContext,0)


        def var_list(self):
            return self.getTypedRuleContext(yalParser.Var_listContext,0)


        def getRuleIndex(self):
            return yalParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = yalParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 82
                self.match(yalParser.FUNC)
                self.state = 85
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 83
                    self.array_element()
                    pass

                elif la_ == 2:
                    self.state = 84
                    self.scalar_element()
                    pass


                self.state = 87
                self.match(yalParser.ASS_OP)
                self.state = 88
                self.match(yalParser.ID)
                self.state = 89
                self.match(yalParser.LPAR)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==yalParser.ID:
                    self.state = 90
                    self.var_list()


                self.state = 93
                self.match(yalParser.RPAR)
                pass

            elif la_ == 2:
                self.state = 95
                self.match(yalParser.FUNC)
                self.state = 96
                self.match(yalParser.ID)
                self.state = 97
                self.match(yalParser.LPAR)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==yalParser.ID:
                    self.state = 98
                    self.var_list()


                self.state = 101
                self.match(yalParser.RPAR)
                pass


            self.state = 104
            self.match(yalParser.L_BRACKET)
            self.state = 105
            self.stmt_list()
            self.state = 106
            self.match(yalParser.R_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yalParser.Array_elementContext)
            else:
                return self.getTypedRuleContext(yalParser.Array_elementContext,i)


        def scalar_element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yalParser.Scalar_elementContext)
            else:
                return self.getTypedRuleContext(yalParser.Scalar_elementContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(yalParser.COMMA)
            else:
                return self.getToken(yalParser.COMMA, i)

        def getRuleIndex(self):
            return yalParser.RULE_var_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_list" ):
                listener.enterVar_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_list" ):
                listener.exitVar_list(self)




    def var_list(self):

        localctx = yalParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 108
                self.array_element()
                pass

            elif la_ == 2:
                self.state = 109
                self.scalar_element()
                pass


            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==yalParser.COMMA:
                self.state = 112
                self.match(yalParser.COMMA)
                self.state = 115
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 113
                    self.array_element()
                    pass

                elif la_ == 2:
                    self.state = 114
                    self.scalar_element()
                    pass


                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_elementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(yalParser.ID, 0)

        def getRuleIndex(self):
            return yalParser.RULE_array_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_element" ):
                listener.enterArray_element(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_element" ):
                listener.exitArray_element(self)




    def array_element(self):

        localctx = yalParser.Array_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(yalParser.ID)
            self.state = 123
            self.match(yalParser.T__0)
            self.state = 124
            self.match(yalParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Scalar_elementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(yalParser.ID, 0)

        def getRuleIndex(self):
            return yalParser.RULE_scalar_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScalar_element" ):
                listener.enterScalar_element(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScalar_element" ):
                listener.exitScalar_element(self)




    def scalar_element(self):

        localctx = yalParser.Scalar_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_scalar_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(yalParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yalParser.StmtContext)
            else:
                return self.getTypedRuleContext(yalParser.StmtContext,i)


        def getRuleIndex(self):
            return yalParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)




    def stmt_list(self):

        localctx = yalParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stmt_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << yalParser.WHILE) | (1 << yalParser.IF) | (1 << yalParser.ID))) != 0):
                self.state = 128
                self.stmt()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def while_yal(self):
            return self.getTypedRuleContext(yalParser.While_yalContext,0)


        def if_yal(self):
            return self.getTypedRuleContext(yalParser.If_yalContext,0)


        def assign(self):
            return self.getTypedRuleContext(yalParser.AssignContext,0)


        def call(self):
            return self.getTypedRuleContext(yalParser.CallContext,0)


        def D_COMMA(self):
            return self.getToken(yalParser.D_COMMA, 0)

        def getRuleIndex(self):
            return yalParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = yalParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.while_yal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.if_yal()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.assign()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.call()
                self.state = 138
                self.match(yalParser.D_COMMA)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def left_op(self):
            return self.getTypedRuleContext(yalParser.Left_opContext,0)


        def ASS_OP(self):
            return self.getToken(yalParser.ASS_OP, 0)

        def right_op(self):
            return self.getTypedRuleContext(yalParser.Right_opContext,0)


        def D_COMMA(self):
            return self.getToken(yalParser.D_COMMA, 0)

        def getRuleIndex(self):
            return yalParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = yalParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.left_op()
            self.state = 143
            self.match(yalParser.ASS_OP)
            self.state = 144
            self.right_op()
            self.state = 145
            self.match(yalParser.D_COMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Left_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_access(self):
            return self.getTypedRuleContext(yalParser.Array_accessContext,0)


        def scalar_access(self):
            return self.getTypedRuleContext(yalParser.Scalar_accessContext,0)


        def getRuleIndex(self):
            return yalParser.RULE_left_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeft_op" ):
                listener.enterLeft_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeft_op" ):
                listener.exitLeft_op(self)




    def left_op(self):

        localctx = yalParser.Left_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_left_op)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.array_access()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.scalar_access()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Right_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yalParser.TermContext)
            else:
                return self.getTypedRuleContext(yalParser.TermContext,i)


        def ART_OP(self):
            return self.getToken(yalParser.ART_OP, 0)

        def BTW_OP(self):
            return self.getToken(yalParser.BTW_OP, 0)

        def ADDSUB_OP(self):
            return self.getToken(yalParser.ADDSUB_OP, 0)

        def array_size(self):
            return self.getTypedRuleContext(yalParser.Array_sizeContext,0)


        def getRuleIndex(self):
            return yalParser.RULE_right_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRight_op" ):
                listener.enterRight_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRight_op" ):
                listener.exitRight_op(self)




    def right_op(self):

        localctx = yalParser.Right_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_right_op)
        self._la = 0 # Token type
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [yalParser.ADDSUB_OP, yalParser.ID, yalParser.NUMBER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.term()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << yalParser.ADDSUB_OP) | (1 << yalParser.ART_OP) | (1 << yalParser.BTW_OP))) != 0):
                    self.state = 152
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << yalParser.ADDSUB_OP) | (1 << yalParser.ART_OP) | (1 << yalParser.BTW_OP))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 153
                    self.term()


                pass
            elif token in [yalParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(yalParser.T__0)
                self.state = 157
                self.array_size()
                self.state = 158
                self.match(yalParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_sizeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scalar_access(self):
            return self.getTypedRuleContext(yalParser.Scalar_accessContext,0)


        def NUMBER(self):
            return self.getToken(yalParser.NUMBER, 0)

        def getRuleIndex(self):
            return yalParser.RULE_array_size

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_size" ):
                listener.enterArray_size(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_size" ):
                listener.exitArray_size(self)




    def array_size(self):

        localctx = yalParser.Array_sizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_array_size)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [yalParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.scalar_access()
                pass
            elif token in [yalParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.match(yalParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(yalParser.NUMBER, 0)

        def call(self):
            return self.getTypedRuleContext(yalParser.CallContext,0)


        def array_access(self):
            return self.getTypedRuleContext(yalParser.Array_accessContext,0)


        def scalar_access(self):
            return self.getTypedRuleContext(yalParser.Scalar_accessContext,0)


        def ADDSUB_OP(self):
            return self.getToken(yalParser.ADDSUB_OP, 0)

        def getRuleIndex(self):
            return yalParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = yalParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==yalParser.ADDSUB_OP:
                self.state = 166
                self.match(yalParser.ADDSUB_OP)


            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.state = 169
                self.match(yalParser.NUMBER)
                pass

            elif la_ == 2:
                self.state = 170
                self.call()
                pass

            elif la_ == 3:
                self.state = 171
                self.array_access()
                pass

            elif la_ == 4:
                self.state = 172
                self.scalar_access()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprtestContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(yalParser.LPAR, 0)

        def left_op(self):
            return self.getTypedRuleContext(yalParser.Left_opContext,0)


        def REL_OP(self):
            return self.getToken(yalParser.REL_OP, 0)

        def right_op(self):
            return self.getTypedRuleContext(yalParser.Right_opContext,0)


        def RPAR(self):
            return self.getToken(yalParser.RPAR, 0)

        def getRuleIndex(self):
            return yalParser.RULE_exprtest

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprtest" ):
                listener.enterExprtest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprtest" ):
                listener.exitExprtest(self)




    def exprtest(self):

        localctx = yalParser.ExprtestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_exprtest)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(yalParser.LPAR)
            self.state = 176
            self.left_op()
            self.state = 177
            self.match(yalParser.REL_OP)
            self.state = 178
            self.right_op()
            self.state = 179
            self.match(yalParser.RPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_yalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(yalParser.WHILE, 0)

        def exprtest(self):
            return self.getTypedRuleContext(yalParser.ExprtestContext,0)


        def L_BRACKET(self):
            return self.getToken(yalParser.L_BRACKET, 0)

        def stmt_list(self):
            return self.getTypedRuleContext(yalParser.Stmt_listContext,0)


        def R_BRACKET(self):
            return self.getToken(yalParser.R_BRACKET, 0)

        def getRuleIndex(self):
            return yalParser.RULE_while_yal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_yal" ):
                listener.enterWhile_yal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_yal" ):
                listener.exitWhile_yal(self)




    def while_yal(self):
